hphp/hack/test/typecheck/constraints/tparam_class_const_bad.php.exp
File "tparam_class_const_bad.php", line 4, characters 12-25:
You are trying to access the static property 'DOES_NOT_EXIST' but this is a value of generic type T (Typing[4252])
File "tparam_class_const_bad.php", line 3, characters 28-28:
Definition is here
