hphp/hack/test/typecheck/constraints/tparam_class_const_bad.php
<?hh // strict

function test<T>(classname<T> $c): void {
  $_ = $c::DOES_NOT_EXIST;
}
